# backstage-simple-client

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
backstage_simple_client/: __init__.py  client.py  common.py  filters.py
backstage_simple_client/models/: entities.py  requests.py  responses.py
tests/: test_client.py
