[project]
name = "backstage-simple-client"
version = "0.1.0"
description = "A simple client for Backstage developer portal"
authors = [
    {name = "Tomasz Habiger", email = "tomasz.habiger@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx >= 0.18.2",
    "pydantic >= 1.8.2"
]

[project.urls]
Homepage = "https://github.com/thabiger/backstage-simple-client"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
