[project]
name = "backstage-simple-client"
version = "0.1.2"
description = "A simple client for Backstage developer portal"
authors = [
    {name = "Tomasz Habiger", email = "tomasz.habiger@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx >= 0.18.2",
    "pydantic >= 1.8.2"
]

[project.urls]
Homepage = "https://github.com/thabiger/backstage-simple-client"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
bumpver = "^2021"

[tool.bumpver]
current_version = "0.1.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
	'version = "{version}"'
]